tests/ui/traits/associated_type_bound/check-trait-object-bounds-2.stderr
error[E0277]: expected a `FnOnce(&i32)` closure, found `i32`
  --> $DIR/check-trait-object-bounds-2.rs:13:9
   |
LL |     f::<dyn for<'x> X<'x, F = i32>>();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an `FnOnce(&i32)` closure, found `i32`
   |
   = help: the trait `for<'a> FnOnce(&'a i32)` is not implemented for `i32`
note: required by a bound in `f`
  --> $DIR/check-trait-object-bounds-2.rs:8:9
   |
LL | fn f<T: for<'r> X<'r> + ?Sized>() {
   |         ^^^^^^^^^^^^^ required by this bound in `f`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
